fix jacoco coverage report generation